[project]
name = "ytmdl"
description = "A command-line app for downloading YouTube Music songs with tags from YouTube Music."
requires-python = ">=3.10"
authors = [{ name = "HeathcliffDev" }]
dependencies = [
    "click",
    "colorama",
    "inquirerpy",
    "mutagen",
    "pillow",
    "yt-dlp",
    "ytmusicapi",
	"yt-dlp-ejs",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/HeathcliffDev/ytmdl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
ytmdl = "ytmdl.cli:main"
